syntaxic.output
Terminals unused in grammar

   CONST_TOKEN
   ERREUR_TOKEN


Grammar

    0 $accept: program $end

    1 program: PROGRAM_TOKEN ID_TOKEN PV_TOKEN block PT_TOKEN

    2 block: declaration statement

    3 declaration: VAR_TOKEN vid PV_TOKEN

    4 vid: ID_TOKEN
    5    | ID_TOKEN VI_TOKEN vid

    6 statement: BEGIN_TOKEN small_stat END_TOKEN

    7 small_stat: %empty
    8           | w_r_stat small_stat
    9           | if_stat small_stat
   10           | while_stat small_stat
   11           | affectation_stat small_stat

   12 affectation_stat: ID_TOKEN AFF_TOKEN operationform PV_TOKEN

   13 operationform: num
   14              | num operation operationform

   15 num: ID_TOKEN
   16    | NUM_TOKEN
   17    | PO_TOKEN operationform PF_TOKEN

   18 operation: PLUS_TOKEN
   19          | MINUS_TOKEN
   20          | DIV_TOKEN
   21          | MULT_TOKEN

   22 w_r_stat: write_stat
   23         | read_stat

   24 write_stat: WRITE_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN

   25 read_stat: READ_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN

   26 if_stat: IF_TOKEN condition THEN_TOKEN statement

   27 while_stat: WHILE_TOKEN condition DO_TOKEN statement

   28 condition: num comparaison_op num

   29 comparaison_op: DIFF_TOKEN
   30               | EG_TOKEN
   31               | SUP_TOKEN
   32               | INF_TOKEN
   33               | INFEG_TOKEN
   34               | SUPEG_TOKEN


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM_TOKEN (258) 16
IF_TOKEN (259) 26
THEN_TOKEN (260) 26
BEGIN_TOKEN (261) 6
END_TOKEN (262) 6
PROGRAM_TOKEN (263) 1
CONST_TOKEN (264)
VAR_TOKEN (265) 3
WHILE_TOKEN (266) 27
READ_TOKEN (267) 25
WRITE_TOKEN (268) 24
DO_TOKEN (269) 27
ID_TOKEN (270) 1 4 5 12 15 24 25
PLUS_TOKEN (271) 18
MINUS_TOKEN (272) 19
MULT_TOKEN (273) 21
DIV_TOKEN (274) 20
INF_TOKEN (275) 32
SUP_TOKEN (276) 31
EG_TOKEN (277) 30
AFF_TOKEN (278) 12
INFEG_TOKEN (279) 33
SUPEG_TOKEN (280) 34
PV_TOKEN (281) 1 3 12 24 25
PT_TOKEN (282) 1
PO_TOKEN (283) 17 24 25
PF_TOKEN (284) 17 24 25
DIFF_TOKEN (285) 29
VI_TOKEN (286) 5
ERREUR_TOKEN (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
block (35)
    on left: 2, on right: 1
declaration (36)
    on left: 3, on right: 2
vid (37)
    on left: 4 5, on right: 3 5
statement (38)
    on left: 6, on right: 2 26 27
small_stat (39)
    on left: 7 8 9 10 11, on right: 6 8 9 10 11
affectation_stat (40)
    on left: 12, on right: 11
operationform (41)
    on left: 13 14, on right: 12 14 17
num (42)
    on left: 15 16 17, on right: 13 14 28
operation (43)
    on left: 18 19 20 21, on right: 14
w_r_stat (44)
    on left: 22 23, on right: 8
write_stat (45)
    on left: 24, on right: 22
read_stat (46)
    on left: 25, on right: 23
if_stat (47)
    on left: 26, on right: 9
while_stat (48)
    on left: 27, on right: 10
condition (49)
    on left: 28, on right: 26 27
comparaison_op (50)
    on left: 29 30 31 32 33 34, on right: 28


State 0

    0 $accept: . program $end

    PROGRAM_TOKEN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM_TOKEN . ID_TOKEN PV_TOKEN block PT_TOKEN

    ID_TOKEN  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM_TOKEN ID_TOKEN . PV_TOKEN block PT_TOKEN

    PV_TOKEN  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: PROGRAM_TOKEN ID_TOKEN PV_TOKEN . block PT_TOKEN

    VAR_TOKEN  shift, and go to state 6

    block        go to state 7
    declaration  go to state 8


State 6

    3 declaration: VAR_TOKEN . vid PV_TOKEN

    ID_TOKEN  shift, and go to state 9

    vid  go to state 10


State 7

    1 program: PROGRAM_TOKEN ID_TOKEN PV_TOKEN block . PT_TOKEN

    PT_TOKEN  shift, and go to state 11


State 8

    2 block: declaration . statement

    BEGIN_TOKEN  shift, and go to state 12

    statement  go to state 13


State 9

    4 vid: ID_TOKEN .
    5    | ID_TOKEN . VI_TOKEN vid

    VI_TOKEN  shift, and go to state 14

    $default  reduce using rule 4 (vid)


State 10

    3 declaration: VAR_TOKEN vid . PV_TOKEN

    PV_TOKEN  shift, and go to state 15


State 11

    1 program: PROGRAM_TOKEN ID_TOKEN PV_TOKEN block PT_TOKEN .

    $default  reduce using rule 1 (program)


State 12

    6 statement: BEGIN_TOKEN . small_stat END_TOKEN

    IF_TOKEN     shift, and go to state 16
    WHILE_TOKEN  shift, and go to state 17
    READ_TOKEN   shift, and go to state 18
    WRITE_TOKEN  shift, and go to state 19
    ID_TOKEN     shift, and go to state 20

    $default  reduce using rule 7 (small_stat)

    small_stat        go to state 21
    affectation_stat  go to state 22
    w_r_stat          go to state 23
    write_stat        go to state 24
    read_stat         go to state 25
    if_stat           go to state 26
    while_stat        go to state 27


State 13

    2 block: declaration statement .

    $default  reduce using rule 2 (block)


State 14

    5 vid: ID_TOKEN VI_TOKEN . vid

    ID_TOKEN  shift, and go to state 9

    vid  go to state 28


State 15

    3 declaration: VAR_TOKEN vid PV_TOKEN .

    $default  reduce using rule 3 (declaration)


State 16

   26 if_stat: IF_TOKEN . condition THEN_TOKEN statement

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    num        go to state 32
    condition  go to state 33


State 17

   27 while_stat: WHILE_TOKEN . condition DO_TOKEN statement

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    num        go to state 32
    condition  go to state 34


State 18

   25 read_stat: READ_TOKEN . PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN

    PO_TOKEN  shift, and go to state 35


State 19

   24 write_stat: WRITE_TOKEN . PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN

    PO_TOKEN  shift, and go to state 36


State 20

   12 affectation_stat: ID_TOKEN . AFF_TOKEN operationform PV_TOKEN

    AFF_TOKEN  shift, and go to state 37


State 21

    6 statement: BEGIN_TOKEN small_stat . END_TOKEN

    END_TOKEN  shift, and go to state 38


State 22

   11 small_stat: affectation_stat . small_stat

    IF_TOKEN     shift, and go to state 16
    WHILE_TOKEN  shift, and go to state 17
    READ_TOKEN   shift, and go to state 18
    WRITE_TOKEN  shift, and go to state 19
    ID_TOKEN     shift, and go to state 20

    $default  reduce using rule 7 (small_stat)

    small_stat        go to state 39
    affectation_stat  go to state 22
    w_r_stat          go to state 23
    write_stat        go to state 24
    read_stat         go to state 25
    if_stat           go to state 26
    while_stat        go to state 27


State 23

    8 small_stat: w_r_stat . small_stat

    IF_TOKEN     shift, and go to state 16
    WHILE_TOKEN  shift, and go to state 17
    READ_TOKEN   shift, and go to state 18
    WRITE_TOKEN  shift, and go to state 19
    ID_TOKEN     shift, and go to state 20

    $default  reduce using rule 7 (small_stat)

    small_stat        go to state 40
    affectation_stat  go to state 22
    w_r_stat          go to state 23
    write_stat        go to state 24
    read_stat         go to state 25
    if_stat           go to state 26
    while_stat        go to state 27


State 24

   22 w_r_stat: write_stat .

    $default  reduce using rule 22 (w_r_stat)


State 25

   23 w_r_stat: read_stat .

    $default  reduce using rule 23 (w_r_stat)


State 26

    9 small_stat: if_stat . small_stat

    IF_TOKEN     shift, and go to state 16
    WHILE_TOKEN  shift, and go to state 17
    READ_TOKEN   shift, and go to state 18
    WRITE_TOKEN  shift, and go to state 19
    ID_TOKEN     shift, and go to state 20

    $default  reduce using rule 7 (small_stat)

    small_stat        go to state 41
    affectation_stat  go to state 22
    w_r_stat          go to state 23
    write_stat        go to state 24
    read_stat         go to state 25
    if_stat           go to state 26
    while_stat        go to state 27


State 27

   10 small_stat: while_stat . small_stat

    IF_TOKEN     shift, and go to state 16
    WHILE_TOKEN  shift, and go to state 17
    READ_TOKEN   shift, and go to state 18
    WRITE_TOKEN  shift, and go to state 19
    ID_TOKEN     shift, and go to state 20

    $default  reduce using rule 7 (small_stat)

    small_stat        go to state 42
    affectation_stat  go to state 22
    w_r_stat          go to state 23
    write_stat        go to state 24
    read_stat         go to state 25
    if_stat           go to state 26
    while_stat        go to state 27


State 28

    5 vid: ID_TOKEN VI_TOKEN vid .

    $default  reduce using rule 5 (vid)


State 29

   16 num: NUM_TOKEN .

    $default  reduce using rule 16 (num)


State 30

   15 num: ID_TOKEN .

    $default  reduce using rule 15 (num)


State 31

   17 num: PO_TOKEN . operationform PF_TOKEN

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    operationform  go to state 43
    num            go to state 44


State 32

   28 condition: num . comparaison_op num

    INF_TOKEN    shift, and go to state 45
    SUP_TOKEN    shift, and go to state 46
    EG_TOKEN     shift, and go to state 47
    INFEG_TOKEN  shift, and go to state 48
    SUPEG_TOKEN  shift, and go to state 49
    DIFF_TOKEN   shift, and go to state 50

    comparaison_op  go to state 51


State 33

   26 if_stat: IF_TOKEN condition . THEN_TOKEN statement

    THEN_TOKEN  shift, and go to state 52


State 34

   27 while_stat: WHILE_TOKEN condition . DO_TOKEN statement

    DO_TOKEN  shift, and go to state 53


State 35

   25 read_stat: READ_TOKEN PO_TOKEN . ID_TOKEN PF_TOKEN PV_TOKEN

    ID_TOKEN  shift, and go to state 54


State 36

   24 write_stat: WRITE_TOKEN PO_TOKEN . ID_TOKEN PF_TOKEN PV_TOKEN

    ID_TOKEN  shift, and go to state 55


State 37

   12 affectation_stat: ID_TOKEN AFF_TOKEN . operationform PV_TOKEN

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    operationform  go to state 56
    num            go to state 44


State 38

    6 statement: BEGIN_TOKEN small_stat END_TOKEN .

    $default  reduce using rule 6 (statement)


State 39

   11 small_stat: affectation_stat small_stat .

    $default  reduce using rule 11 (small_stat)


State 40

    8 small_stat: w_r_stat small_stat .

    $default  reduce using rule 8 (small_stat)


State 41

    9 small_stat: if_stat small_stat .

    $default  reduce using rule 9 (small_stat)


State 42

   10 small_stat: while_stat small_stat .

    $default  reduce using rule 10 (small_stat)


State 43

   17 num: PO_TOKEN operationform . PF_TOKEN

    PF_TOKEN  shift, and go to state 57


State 44

   13 operationform: num .
   14              | num . operation operationform

    PLUS_TOKEN   shift, and go to state 58
    MINUS_TOKEN  shift, and go to state 59
    MULT_TOKEN   shift, and go to state 60
    DIV_TOKEN    shift, and go to state 61

    $default  reduce using rule 13 (operationform)

    operation  go to state 62


State 45

   32 comparaison_op: INF_TOKEN .

    $default  reduce using rule 32 (comparaison_op)


State 46

   31 comparaison_op: SUP_TOKEN .

    $default  reduce using rule 31 (comparaison_op)


State 47

   30 comparaison_op: EG_TOKEN .

    $default  reduce using rule 30 (comparaison_op)


State 48

   33 comparaison_op: INFEG_TOKEN .

    $default  reduce using rule 33 (comparaison_op)


State 49

   34 comparaison_op: SUPEG_TOKEN .

    $default  reduce using rule 34 (comparaison_op)


State 50

   29 comparaison_op: DIFF_TOKEN .

    $default  reduce using rule 29 (comparaison_op)


State 51

   28 condition: num comparaison_op . num

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    num  go to state 63


State 52

   26 if_stat: IF_TOKEN condition THEN_TOKEN . statement

    BEGIN_TOKEN  shift, and go to state 12

    statement  go to state 64


State 53

   27 while_stat: WHILE_TOKEN condition DO_TOKEN . statement

    BEGIN_TOKEN  shift, and go to state 12

    statement  go to state 65


State 54

   25 read_stat: READ_TOKEN PO_TOKEN ID_TOKEN . PF_TOKEN PV_TOKEN

    PF_TOKEN  shift, and go to state 66


State 55

   24 write_stat: WRITE_TOKEN PO_TOKEN ID_TOKEN . PF_TOKEN PV_TOKEN

    PF_TOKEN  shift, and go to state 67


State 56

   12 affectation_stat: ID_TOKEN AFF_TOKEN operationform . PV_TOKEN

    PV_TOKEN  shift, and go to state 68


State 57

   17 num: PO_TOKEN operationform PF_TOKEN .

    $default  reduce using rule 17 (num)


State 58

   18 operation: PLUS_TOKEN .

    $default  reduce using rule 18 (operation)


State 59

   19 operation: MINUS_TOKEN .

    $default  reduce using rule 19 (operation)


State 60

   21 operation: MULT_TOKEN .

    $default  reduce using rule 21 (operation)


State 61

   20 operation: DIV_TOKEN .

    $default  reduce using rule 20 (operation)


State 62

   14 operationform: num operation . operationform

    NUM_TOKEN  shift, and go to state 29
    ID_TOKEN   shift, and go to state 30
    PO_TOKEN   shift, and go to state 31

    operationform  go to state 69
    num            go to state 44


State 63

   28 condition: num comparaison_op num .

    $default  reduce using rule 28 (condition)


State 64

   26 if_stat: IF_TOKEN condition THEN_TOKEN statement .

    $default  reduce using rule 26 (if_stat)


State 65

   27 while_stat: WHILE_TOKEN condition DO_TOKEN statement .

    $default  reduce using rule 27 (while_stat)


State 66

   25 read_stat: READ_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN . PV_TOKEN

    PV_TOKEN  shift, and go to state 70


State 67

   24 write_stat: WRITE_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN . PV_TOKEN

    PV_TOKEN  shift, and go to state 71


State 68

   12 affectation_stat: ID_TOKEN AFF_TOKEN operationform PV_TOKEN .

    $default  reduce using rule 12 (affectation_stat)


State 69

   14 operationform: num operation operationform .

    $default  reduce using rule 14 (operationform)


State 70

   25 read_stat: READ_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN .

    $default  reduce using rule 25 (read_stat)


State 71

   24 write_stat: WRITE_TOKEN PO_TOKEN ID_TOKEN PF_TOKEN PV_TOKEN .

    $default  reduce using rule 24 (write_stat)
